cmake_minimum_required(VERSION 3.9)
project(PSU_my_sokoban_2018)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)

add_executable(PSU_my_sokoban_2018
        include/my.h
        include/sokoban.h
        lib/my/conversion.c
        lib/my/dec_to_octal.c
        lib/my/int_to_char.c
        lib/my/intlen.c
        lib/my/malloc_str.c
        lib/my/my.h
        lib/my/my_addchar.c
        lib/my/my_compute_power_rec.c
        lib/my/my_compute_square_root.c
        lib/my/my_find_prime_sup.c
        lib/my/my_getnbr.c
        lib/my/my_is_prime.c
        lib/my/my_isneg.c
        lib/my/my_printf.c
        lib/my/my_put_nbr.c
        lib/my/my_putchar.c
        lib/my/my_putstr.c
        lib/my/my_revstr.c
        lib/my/my_show_word_array.c
        lib/my/my_showmem.c
        lib/my/my_showstr.c
        lib/my/my_sort_int_array.c
        lib/my/my_str_isalpha.c
        lib/my/my_str_islower.c
        lib/my/my_str_isnum.c
        lib/my/my_str_isprintable.c
        lib/my/my_str_isupper.c
        lib/my/my_str_to_word_array.c
        lib/my/my_strcapitalize.c
        lib/my/my_strcat.c
        lib/my/my_strcmp.c
        lib/my/my_strcpy.c
        lib/my/my_strdup.c
        lib/my/my_strlen.c
        lib/my/my_strlowcase.c
        lib/my/my_strncat.c
        lib/my/my_strncmp.c
        lib/my/my_strncpy.c
        lib/my/my_strstr.c
        lib/my/my_strupcase.c
        lib/my/my_swap.c
        lib/my/printf_char_string.c
        lib/my/printf_functions.c
        lib/my/search_char.c
        main.c
        init_sokoban.c
        game_loop.c
        move_player.c
        move_box.c)
